--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
-    "vuetify": "^2.1.0"
+    "vue-router": "^3.1.3",
+    "vue-socket.io": "^3.0.7",
+    "vue-socket.io-extended": "^4.0.1",
+    "vuetify": "^2.1.0",
+    "vuetrend": "^0.3.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@mdi/font": "^4.5.95",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-plugin-router": "^4.0.5",
+    "@vue/cli-plugin-vuex": "^4.0.5",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
