--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && rsync -av dist/* root@165.227.170.175:/var/www/project.jhellberg.me/html/"
   },
   "dependencies": {
     "axios": "^0.19.0",
